--- a/pom.xml
+++ b/pom.xml
@@ -8,24 +8,14 @@
 		<version>3.5.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.sahu.spring-boot-basics</groupId>
 	<artifactId>spring-boot-sftp-integration</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-boot-sftp-integration</name>
 	<description>spring-boot-sftp-integration</description>
-	<url/>
-	<licenses>
-		<license/>
-	</licenses>
-	<developers>
-		<developer/>
-	</developers>
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
+	<url>http://example.com</url>
+
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -53,12 +43,22 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+
+        <!-- jsch for SFTP connection -->
+        <dependency>
+            <groupId>com.github.mwiede</groupId>
+            <artifactId>jsch</artifactId>
+            <version>2.27.2</version>
+        </dependency>
+
+        <!-- OpenAPI and Swagger dependencies -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.9</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
