--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 target/
-.mvn/wrapper/maven-wrapper.jar
+!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -31,7 +31,4 @@ build/
 
 ### VS Code ###
 .vscode/
-/.mvn
 .gitattributes
-mvnw
-mvnw.cmd
